# cxc_hackathon

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README_server.md  main.py  pyproject.toml  requirements.txt  verify_setup.py  voice_chat.py  voice_chat_enhanced.py
DB/: SCHEMA.md  banking_system.db  db_manager.py  db_usage_example.py  migrate_scheduled_calls.py  migrate_sqlite_to_postgres.py  populate_contact_time_preferences.py  populate_planning_scripts.py  populate_transcripts.py  sample_customer.json  transcript_example.json  transcript_example_analysis.json  update_communication_preferences.py
READMEs/: TROUBLESHOOTING.md  VOICE_CHAT_ENHANCED_README.md  VOICE_CHAT_README.md
api/: main.py
audio/: __init__.py  audio_processor.py
call_service/: config.py  customer_example.json  server.py
custom_voice_pipeline/: .env.example  README.md  __init__.py  outbound_call.py  requirements.txt  twilio_server_simple.py
prompts/: master_prompt_email.md  master_prompt_voice.md
scripts/: outbound_call.sh  start_servers.sh  stop_servers.sh  twilio_voice_server.sh
strategy_planning/: README.md  __init__.py  example_usage.py  gemini_example.py  master_prompt_email.md  master_prompt_voice.md  prompt_template.py  strategy_pipeline.py
stt/: README.md  speech_to_text.py
transcript_analysis/: README.md  __init__.py  analyze_and_diff.py  customer_diff.py  example_usage.py  prompt_template.py  transcript_analyzer.py
transcription/: transcription_CA6f676f4f0804cc2e387c7b6fd8071ad1.txt  transcription_CAdc5c0c98ebce9c684106b81c39c50f84.txt  (+1 more)
(+75 files in other folders)
