[project]
name = "cxc-hackathon"
version = "0.1.0"
description = "Banking system for customer data and debt tracking"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]

# Note: This project is a script-based application, not a package
# Use `uv sync --no-install-project` to avoid build errors
